[tool.poetry]
name = "llm-terminal"
version = "0.1.0"
description = ""
authors = ["Roberto <robertodiaztnf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
replicate = "^0.25.2"
click = "^8.1.7"
transformers = "^4.40.1"
newspaper3k = "^0.2.8"
lxml-html-clean = "^0.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true